--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -159,18 +159,18 @@ services:
     networks:
       - my_network
 
-#  nginx:
-#    image: nginx:latest
-#    container_name: nginx_proxy
-#    ports:
-#      - "1883:1883"
-#    volumes:
-#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-#    depends_on:
-#      - mosquitto
-#      - spring-boot-app
-#    networks:
-#      - my_network
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    ports:
+      - "1883:1883"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - mosquitto
+      - spring-boot-app
+    networks:
+      - my_network
 
 volumes:
   mysql_data:
