--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -21,9 +21,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "bundler",
     "importHelpers": true,
-    "target": "es6",
-    "module": "commonjs",
-    "allowJs": true,
+    "target": "ES2022",
+    "module": "ES2022",
     "lib": [
       "ES2022",
       "dom"
