--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
-    "@angular/cdk": "^18.2.2",
+    "@angular/cdk": "^18.2.7",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
@@ -28,9 +28,12 @@
     "@fortawesome/angular-fontawesome": "^0.15.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@stomp/stompjs": "^7.0.0",
+    "@swimlane/ngx-charts": "^21.0.0",
+    "@swimlane/ngx-graph": "^9.0.1",
     "@types/jspdf": "^2.0.0",
     "@types/sockjs-client": "^1.5.4",
     "angular-sockjs": "^0.1.0",
+    "d3": "^7.9.0",
     "date-fns": "^4.1.0",
     "echarts": "^5.5.1",
     "express": "^4.18.2",
